Adjustment to post formatting

--- a/_posts/2024-11-03-awards.md
+++ b/_posts/2024-11-03-awards.md
@@ -6,49 +6,53 @@ tags: [awards]
 pin: true
 ---
 
-## Spot Award
+## Omnicom Media Group, Toronto, ON
+### Spot Award
 
 * Date: 2020-12-31
 * Awarder: Omnicom Media Group
 * Summary: Recognized for delivering performance that surpassed expectations.
 
-## R.E.A.P. Award
+### R.E.A.P. Award
 
 * Date: 2018-07-01
 * Awarder: Omnicom Media Group
 * Summary: Commended for innovatively automating a process previously considered manual only, resulting in significant cost savings.
 
-## MBU Sales Recognition Awards - Platinum Club Winner
+---
+
+## Rogers Sports and Media, Toronto, ON
+### MBU Sales Recognition Awards - Platinum Club Winner
 
 * Date: 2017-02-28
 * Awarder: Rogers Sports and Media
 * Summary: Acknowledged for streamlining departmental processes and implementing cost-saving measures.
 
-## MBU Sales Recognition Awards - Sales Ops WOW
+### MBU Sales Recognition Awards - Sales Ops WOW
 
 * Date: 2017-01-31
 * Awarder: Rogers Sports and Media
 * Summary: Awarded for exceptional performance and dedication in the sales operation department.
 
-## Employee of the Year Award
+### Employee of the Year Award
 
 * Date: 2016-01-31
 * Awarder: Rogers Sports and Media
 * Summary: Honored as Employee of the Year for demonstrating exceptional performance and commitment to corporate principles and values.
 
-## Business Impact Award
+### Business Impact Award
 
 * Date: 2015-07-31
 * Awarder: Rogers Communications
 * Summary: Recognized for commitment to innovation and creating new benchmarks for success, driving growth and executing against strategic plans.
 
-## Team of the Year Award - Rogers Media
+### Team of the Year Award - Rogers Media
 
 * Date: 2014-01-31
 * Awarder: Rogers Sports and Media
 * Summary: Celebrated for commitment to innovation, creating new benchmarks for success, and driving growth in alignment with Rogers' Five-Year Plan.
 
-## Business Impact Award
+### Business Impact Award
 
 * Date: 2013-06-30
 * Awarder: Rogers Sports and Media
