--- a/_posts/2024-11-03-skills.md
+++ b/_posts/2024-11-03-skills.md
@@ -8,23 +8,23 @@ pin: true
 
 ---
 
-# Technical Skills
+## Technical Skills and Experience
 
-* ## Data Science and Machine Learning
+* ### Data Science and Machine Learning
     * Pandas
     * Polars
     * PyTorch
     * TennsorFlow
-* ## Cloud Computing:
+* ### Cloud Computing Platforms:
     * AWS 
     * Azure
     * Google Cloud (G Cloud)
-* ## Data Analytics & Visualization:
+* ### Data Analytics & Visualization:
     * Data Studio
     * Looker
     * Power BI
     * Tableau
-* ## Programming Languages:
+* ### Programming Languages:
     * Python
     * T-SQL
     * Visual Basic
@@ -32,14 +32,14 @@ pin: true
 
 ---
 
-# Project Management & Operations**
+## Project Management & Operations**
 
-* ## Project Management Methodologies:
+* ### Project Management Methodologies:
     * Scrum
     * Six Sigma
-* ## Project & Team Management Tools:
+* ### Project & Team Management Tools:
     * Asana
     * Jira
-* ## Project Management Skills:
+* ### Project Management Skills:
     * Team and Schedule Management
     * Risk Management 
