--- a/_posts/2024-11-03-skills.md
+++ b/_posts/2024-11-03-skills.md
@@ -32,7 +32,7 @@ pin: true
 
 ---
 
-## Project Management & Operations**
+## Project Management & Operations
 
 * ### Project Management Methodologies:
     * Scrum
